combine make_word_vectors and surprisal_lme - work in progress still - check for commit errors at some point and ned to reorganize whole project directory tree/ prune extra stuff

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@ config.local.yaml
 
 # Ignore eeg data because too large -> TODO: add datalad backup?
 eeg_data/
+Ed/
+data/
+results/
+figures/
+stimuli/
 # Ignore system-specific files
 .DS_Store
 Thumbs.db
